--- a/AboutMe/about.html
+++ b/AboutMe/about.html
@@ -67,8 +67,8 @@
             <p> My family and I helped to raise two batches of hamsters - 14 and 16 babies a piece.  I have always loved hamsters and their curious, playful nature.</p>
             <p> I also love to play chess with friends, online, and learn by myself.  It's a good exercise in critical thinking as well as thinking ahead, and I thoroughly enjoy it!</p>
             <p>The following pictures are just a few of my hamsters!</p>
-            <img src="BubblesBabies.jpg" />
-            <img src="DJChess.jpg" />
+            <img src="BubblesBabies.JPG" />
+            <img src="DJChess.JPG" />
         </article>
         <article>
             <h2>LEGO!</h2>
