--- a/AboutMe/about.html
+++ b/AboutMe/about.html
@@ -88,7 +88,7 @@
         </article>   
         <article>
             <h2>Fiction Writing</h2>            
-            <p> I also love to write books (as do my siblings!), and you can view many of my books <a href="../../HamsterPublishers/Code/bookPage.html"> HERE </a></p>            
+            <p> I also love to write books (as do my siblings!), and you can view many of my books <a href="https://www.amazon.com/s?i=stripbooks&rh=p_27%3AKaiser+Slocum&s=relevancerank&text=Kaiser+Slocum&ref=dp_byline_sr_book_1"> HERE </a></p>            
             <img src="FrontCover.png" />
             <img src="medfront.png" />
         </article>       
