--- a/MainIndex/index.html
+++ b/MainIndex/index.html
@@ -53,13 +53,13 @@
         </article>
         <article>
             <h2>Technical Skills!</h2>
-            <p>Programming Languages: C#, C, C++, Python, HTML5, CSS3, Javascript, and a little SVG</p>
+            <p>Programming Languages: C++, C#, Python, C, HTML 5, CSS3, Javascript, PHP</p>
             <p>Frameworks and Applications: .NET framework, Visual Studio, Eclipse, CodeBlocks, Jupyter Notebook</p>
-            <p>Platform/OS: Windows, Linux – Ubuntu / Arch Linux (I also am currently learning more about MacOS)</p>
+            <p>Platform/OS: Windows, Apple, Linux – Ubuntu / Arch Linux</p>
             <p>Databases: Microsoft SQL, SQL, NOSQL (on Firebase)</p>
             <p>Revision Control: GIT, Bitbucket, Github (All of these I keep fairly active, as it seems that I'm always working on some sort of programming project!)</p>
-            <p>Networking: Cisco Packet Tracer, Wire Shark, Router configuring</p>
-            <p>Math: Trigonometry, Statistics, Calculus, Discrete, Numerical Analysis</p>            
+            <p>Math: Trigonometry, Statistics, Calculus, Discrete, Numerical Analysis</p>   
+            <p>Experience: Machine Learning (PyTorch, Keras, Computer Vision, CNN’s, GAN’s), Cryptography (OpenSSL), Unity Game Engine, Networking (Cisco Packet Tracer, Wire Shark, Router configuring)</p>         
         </article>
         <article>
             <h2>Highlighted Projects!</h2>
@@ -69,6 +69,13 @@
                 manage to code up the entire project, but it involved several classes and took quite a bit longer than anticipated.  However, the result was definitely worth it!</p>
             <p>At my current job at Elegant Elephant Baking Co., I noticed several inefficiencies in taking flour inventory, so I created some easy-to-use software for my boss that
                 will speed up the process, eliminate error-prone areas, and encourage efficiency at my job!</p>
+            <p>
+                I am currently collaborating with two undergraduates from the University of Oregon to create a Dragon Racing Game in Unity. 
+                You can view the GitHub Repository <a href="https://github.com/WizardGit/StingerRunRacing">here</a> and the pre-alpha game <a href="https://play.unity.com/mg/other/webgl-builds-186663">here!</a>
+            </p>
+            <p>
+
+            </p>
         </article>        
     </section>
     <aside>        
