--- a/MainIndex/index.html
+++ b/MainIndex/index.html
@@ -71,7 +71,7 @@
                 will speed up the process, eliminate error-prone areas, and encourage efficiency at my job!</p>
             <p>
                 I am currently collaborating with two undergraduates from the University of Oregon to create a Dragon Racing Game in Unity. 
-                You can view the GitHub Repository <a href="https://github.com/WizardGit/StingerRunRacing">here</a> and the pre-alpha game <a href="https://play.unity.com/mg/other/webgl-builds-186663">here!</a>
+                You can view the GitHub Repository <a href="https://github.com/WizardGit/StingerRunRacing">here</a> and the game <a href="https://play.unity.com/mg/other/webgl-builds-231">here!</a>
             </p>
             <p>
 
@@ -82,8 +82,8 @@
         <article id="ElegantElephant">            
             <h2>What have I been up to recently?</h2>
             <img id="EELogo" src="EELogo.jpg" />            
-            <p>I am currently designing an application that will assist in my job at Elegant Elephant Baking Co.!  As the dedicated flour mixer, it's my job to mix all the flour used and make sure we have enough on hand, but this can be difficult!
-                Hence, my software will provide a huge time saver in communicating the ingredients needed and in the correct units to the dedicated ingredients buyer at my job.  It's been a challenge, but I'm enjoying it!</p>            
+            <p>I designed an application that assists flour mixers at Elegant Elephant Baking Co.!  Flour mixers at this bakery must mix all the flour used and make sure there is enough on hand, but this can be difficult!
+                Hence, my software is a huge time saver in communicating the ingredients needed and in the correct units for purchasing.  It was a challenge, but the result was certainly worth it</p>            
         </article> 
         <article>            
             <h2>In Memory of <br> DJ, Cupcake, Katee, Prince, Coconut </h2>
