--- a/HamsterPublishers/Code/bookPage.html
+++ b/HamsterPublishers/Code/bookPage.html
@@ -1,6 +1,9 @@
 <!-- Hamster Publisher Website
+    Filename: bookPage.html
     Author: Kaiser Slocum
-    Date (Last Edited): 12/30/2021
+    Date (Last Edited): 7/9/2022
+
+   Purpose: The purpose of this program is to give the data for the website
 -->
 <!--Don't forget to add tooltips!  <a href="" title="text">content</a>-->
 
@@ -88,9 +91,7 @@
     </section>
     <aside>        
         <article>            
-            <h2 id="title">Chapter 1 <br> from <ins>Failure Is Not An Option</ins>!</h2>
-            <!--<object data='../Books/FailureIsNotAnOption.htm' id='testy' type='text/html' width='900px' height='800px'>
-            </object>  -->
+            <h2 id="title"><ins>Failure Is Not An Option</ins></h2>            
             <iframe src="../Books/FailureIsNotAnOption.pdf#toolbar=0" id='BookDisplay' width='900px' height='800px'>
             </iframe>
         </article> 
