--- a/PersonalWebsite/MainIndex/index.html
+++ b/PersonalWebsite/MainIndex/index.html
@@ -1,6 +1,6 @@
 <!-- All About Kaiser
     Author: Kaiser Slocum
-    Date (Last Edited): 12/30/2021
+    Date (Last Edited): 7/9/2022
 -->
 <!--Don't forget to add tooltips!  <a href="" title="text">content</a> -->
 
@@ -40,7 +40,8 @@
                 <img src="KaiserAvatarPicNew.png" />
                 <figcaption>Me!</figcaption>
             </figure> 
-            <p>My name is Kaiser Slocum, and I am a Senior at the <a href="https://www.uoregon.edu/">University of Oregon</a> majoring in Computer Science.</p>
+            <p>My name is Kaiser Slocum, and I am a Tech Team Member at <a href="https://www.fastenterprises.com/"> Fast Enterprises.</a></p>
+            <p>I have a Bachelor's in Computer Science from the <a href="https://www.uoregon.edu/"> University of Oregon</a> as well.</p>
             <p>Welcome to my personal website.  Feel free to look around to learn more about me and what I do!</p>
             <p>To learn more about me and what I am up to, click the "About Kaiser" link above.</p>
             <p>You can also keep up to date with me at
@@ -49,7 +50,7 @@
             </p>
             <p>You can also view some of my programming work in my GitHub Repositiory:
                 <a href="https://github.com/WizardGit">Github Respository</a>.
-             </p>            
+             </p>                  
             <p>For a full list of my education and previous work experience, download a PDF version of my <a href="KaiserSlocumResume.pdf">Resume here.</a></p>
         </article>
         <article id="websites">
@@ -74,11 +75,11 @@
         </article>         
     </section>
     <aside>        
-        <article id="ElegantElephant">            
+        <article id="FastEnterprises">            
             <h2>What have I been up to recently?</h2>
-            <img id="EELogo" src="EELogo.jpg" />            
-            <p>I am currently designing an application that will assist in my job at Elegant Elephant Baking Co.!  As the dedicated flour mixer, it's my job to mix all the flour used and make sure we have enough on hand, but this can be difficult!
-                Hence, my software will provide a huge time saver in communicating the ingredients needed and in the correct units to the dedicated ingredients buyer at my job.  It's been a challenge, but I'm enjoying it!</p>            
+            <img id="FastLogo" src="Fast_Enterprises_Logo.png" />            
+            <p>I was hired by Fast Enterprises to develop software for state governments! I am very thankful for FAST and am excited to be able
+                to assist in their many projects.</p>            
         </article> 
         <article>            
             <h2>In Memory of <br> DJ, Cupcake, Katee, Prince, Coconut </h2>
