--- a/ProfessionalWebsite/MainIndex/index.html
+++ b/ProfessionalWebsite/MainIndex/index.html
@@ -1,6 +1,6 @@
 <!-- All About Kaiser
     Author: Kaiser Slocum
-    Date (Last Edited): 12/30/2021
+    Date (Last Edited): 7/9/2022
 -->
 <!--Don't forget to add tooltips!  <a href="" title="text">content</a> -->
 
@@ -39,7 +39,8 @@
                 <img src="KaiserAvatarPicNew.png" />
                 <figcaption>Me!</figcaption>
             </figure> 
-            <p>My name is Kaiser Slocum, and I am a Senior at the <a href="https://www.uoregon.edu/">University of Oregon</a> majoring in Computer Science.</p>
+            <p>My name is Kaiser Slocum, and I am a Tech Team Member at <a href="https://www.fastenterprises.com/"> Fast Enterprises.</a></p>
+            <p>I have a Bachelor's in Computer Science from the <a href="https://www.uoregon.edu/"> University of Oregon</a> as well.</p>
             <p>Welcome to my personal website.  Feel free to look around to learn more about me and what I do!</p>
             <p>To learn more about me and what I am up to, click the "About Kaiser" link above.</p>
             <p>You can also keep up to date with me at
@@ -67,11 +68,11 @@
             <p>If you are anything like me, losing board games is not the most fun thing in the world.  Thus, while playing "CLUE" with my siblings and always losing horribly, I 
                 had the idea to design some software that will utilize every possible clue and deduction available to arrive at the answer as swiftly as is possible.  I did finally
                 manage to code up the entire project, but it involved several classes and took quite a bit longer than anticipated.  However, the result was definitely worth it!</p>
-            <p>At my current job at Elegant Elephant Baking Co., I noticed several inefficiencies in taking flour inventory, so I created some easy-to-use software for my boss that
-                will speed up the process, eliminate error-prone areas, and encourage efficiency at my job!</p>
+            <p>At my past job at Elegant Elephant Baking Co., I noticed several inefficiencies in taking flour inventory, so I created some easy-to-use software for the company that
+                speeds up the process, eliminates error-prone areas, and encourages efficiency!</p>
             <p>
                 I am currently collaborating with two undergraduates from the University of Oregon to create a Dragon Racing Game in Unity. 
-                You can view the GitHub Repository <a href="https://github.com/WizardGit/StingerRunRacing">here</a> and the game <a href="https://play.unity.com/mg/other/webgl-builds-231">here!</a>
+                You can view the GitHub Repository <a href="https://github.com/WizardGit/StingerRunRacing">here</a> and the game <a href="https://play.unity.com/mg/other/webgl-builds-241">here!</a>
             </p>
             <p>
 
@@ -79,11 +80,11 @@
         </article>        
     </section>
     <aside>        
-        <article id="ElegantElephant">            
+        <article id="FastEnterprises">            
             <h2>What have I been up to recently?</h2>
-            <img id="EELogo" src="EELogo.jpg" />            
-            <p>I designed an application that assists flour mixers at Elegant Elephant Baking Co.!  Flour mixers at this bakery must mix all the flour used and make sure there is enough on hand, but this can be difficult!
-                Hence, my software is a huge time saver in communicating the ingredients needed and in the correct units for purchasing.  It was a challenge, but the result was certainly worth it</p>            
+            <img id="FastLogo" src="Fast_Enterprises_Logo.png" />            
+            <p>I was hired by Fast Enterprises to develop software for state governments! I am very thankful for FAST and am excited to be able
+                to assist in their many projects.</p>            
         </article> 
         <article>            
             <h2>In Memory of <br> DJ, Cupcake, Katee, Prince, Coconut </h2>
