--- a/PersonalWebsite/AboutMe/about.html
+++ b/PersonalWebsite/AboutMe/about.html
@@ -1,6 +1,6 @@
 <!-- All About Kaiser
     Author: Kaiser Slocum
-    Date (Last Edited): 12/30/2021
+    Date (Last Edited): 7/9/2022
 -->
 <!--Don't forget to add tooltips!  <a href="" title="text">content</a> -->
 
@@ -32,51 +32,66 @@
             <li><a href="about.html"><h2><p>About Kaiser</p></h2></a></li>            
         </ul>
     </nav>
-    <section>
+    <section>  
         <article>
-            <h2>Early Years</h2>
-            <p>I very much disliked the process of learning to read and starting school, but I loved to run and compete - participating in the local Kids Sports soccer program.</p>
-            <p>I enjoyed attending AWANA in the Cubbies and Sparks program.</p>
+            <h2>Work Experience</h2>
+                <p>I worked as an independent yard care contractor from 2013 to 2022.  In addition, I worked under Premier Staffing Solutions for two years until my client discontinued using their services</p>
+                <p>Around 2015-2022, I started watching the homes of neighbors and friends when they left on vacation in addition to taking care of their pets.  I was also hired from time to time to watch kids or perform other such tasks.</p>
+                <p>From the early summer of 2017 to the end of 2018, I was hired by OBEC Consulting Engineers as an intern to help scan in old, paper copies of plans and files.
+                    Because of the size of the job, several other interns were hired later, and I was promoted to Senior Archive Specialist, where I became in charge of the entire archive network.
+                    Just before completely scanning in every last paper plan/file, OBEC merged with DOWL.  Thus, I finished my internship as an employee of DOWL Engineering.</p>
+                <p>During the summer of 2019, I was hired by Buck General Contracting to help remodel a house.  It was a new experience for me, but I learned so much!</p>
+                <p>From the summer of 2020 to the summer of 2022, I was hired by Elegant Elephant Baking Co. as a dishwasher.  After only three months, I was promoted to assist in baking tasks, and completely run the flour mixing operations in addition to dish washing.</p>
+                <p>During the summer of 2021, I was hired by PONO Security to provide security at the U.S. Olympic trials, it was hard work because of the extremely hot temperatures, but I was glad to be able to help out my hometown at this momentous occation.</p>
+                <p>Starting July 2022, I am now a Tech Team Member of FAST Enterprises and work on software development for governments.</p>
         </article>
         <article>
-            <h2>Elementary Years</h2>
-            <p>I was homeschooled these years, hating writing but liking the reading.</p>
-            <p>I started running around the neighborhood block a lot for my exercise for homeschool and partipated with my dad and brother in some 5k races.
-                In addition, I participated in our local elementary school's track and field program where I honed my running abilty in all types of distances.
-            </p>                
-            <p>I started participating in BSF (Bible Study Fellowship) in addition to AWANA.
-            </p>            
+            <h2>Education</h2>
+            <p>Preschool to Elementary: Homeschooled - with some interaction at my local, elementary school - Irvington Elementary - where I ran on the track team and where I studied occasionally.</p>
+            <p>Middle School: Homeschooled - after completing all available history courses for highschoolers, my parents placed me in a college-level, self-study course.</p>
+            <p>High School: Homeschooled until 11th grade - after completing all available science courses for highschoolers, my parents placed me a college-level, self-study of physics.</p>
+            <p>Lane Community College: Upon reaching 11th grade, I decided to enroll in the local Community College by utilizing a charter school's early-college program.</br>
+                I attended Lane Community College for three years - majoring in Computer Science and maintaining a GPA of 4.238</br>
+                I graduated Lane Community College with four degrees!:
+                <ul>
+                    <li>Associate of Science Oregon Transfer Computer Science</li>
+                    <li>Associate of General Studies</li>
+                    <li>Associate of Science</li>
+                    <li>Associate of Arts Oregon Transfer</li>
+                </ul>   
+                In addition, I graduated my charter school - Baker Charters School - as their Valedictorian!        
+            </p>
+            <p>University of Oregon: Attended the University of Oregon for two years - majoring in Computer Science and maintaining a GPA of 3.85</br>
+                I graduated from the University of Oregon with a:
+                <ul>
+                    <li>Bachelors in Computer Science</li>
+                </ul>   
+            </p>
+        </article>        
+        <article>
+            <h2>Chess and Hamsters</h2>
+            <p> My family and I helped to raise two batches of hamsters - 14 and 16 babies a piece.  I have always loved hamsters and their curious, playful nature.</p>
+            <p> I also love to play chess with friends, online, and learn by myself.  It's a good exercise in critical thinking as well as thinking ahead, and I thoroughly enjoy it!</p>
+            <p>The following pictures are just a few of my hamsters!</p>
+            <img src="BubblesBabies.JPG" />
+            <img src="DJChess.JPG" />
+        </article>
+        <article>
+            <h2>LEGO!</h2>
+            <p>I may be a computer science major, but that doesn't mean I can't enjoy building with LEGO and expressing my creativity!  Big shout out to Bricklink.com's Stud.io software that helped me to create a digital design of these mechs I created.</p>
+            <img src="ExoForceVortexStormceptorPhoto.png" />
+            <img src="LifeOnMarsMiningMech.png" />          
         </article> 
         <article>
-            <h2>Middle School and Early Highschool Years</h2>
-            <p>I was still homeschooled and still disliked writing.  In this time frame my dad assigned me his college history 
-                and physics textbooks that I worked through digilently. None of the rest of my siblings have even touched the first page!
-            </p>
-            <p>I still ran a few 5k running races, participated in two relay triathlons (as the swimmer), and made a personal record of running 3 miles in 20min. 30sec.
-                In addition, I fell in love with badminton.  
-            </p>
-            <p>In these years I participated as a leader in AWANA and also kept attending BSF.  It was pretty much an exhausting cycle of school and yard work
-                since I started taking over my brother's yard care business as he graduated Lane Community College and transferred to the University of Oregon.</p>
-        </article>  
-        <article>
-            <h2>College Years at Lane Community College</h2>            
-            <p>After a lot of thought and prayer I decided to participate in a charter school's early college program at Lane Community College, majoring
-                in computer science with a speciality in programming.  I enjoyed most of my classes and learned a ton.</p>
-            <p>I continued to play sports by myself, played my instruments every now and then, did yard care for local neighbors and friends, and worked as Senior Archive Specialist at DOWL Engineering for about two years before I completed my job. 
-            </p>
-            <p>Unfortunately, AWANA stopped running at the church where it was hosted, so I was left with just attending BSF as part of the children's program at "Women's BSF.
-                During the fall of 2019, I volunteered as a leader for a new, local AWANA club, and enjoyed helping children memorize God's word and grow in their relationship with Christ.                
-                I have also volunteered as an usher at my church - <a href="https://newhopeeugene.com">New Hope Eugene</a> for about two years now.
-            </p>
+            <h2>Exploration</h2>
+            <p>I also like to go exploring and have a little fun while I'm at it...</p>
+            <img src="Pirate.jpg" />
         </article>   
         <article>
-            <h2>College Years at the University of Oregon</h2>            
-            <p> I graduated the spring of 2020 with a GPA of 4.2 and a Valedictorian in my High School Charter School's graduatin class.</p>
-            <p> In the early spring of 2020, I was officially accepted into the University of Oregon's Computer Science department and offered the Summit Scholarship.
-                I will attend UO starting in the fall of 2020 and plan to complete a Bachelor's in Computer Science there.</p>
-            <p>I have also been accepted into a business mentorship program that will help me to become financially independent and make a big impact on the lives of my friends, family, and community.  
-                I am excited and honored to work alongside my older sister in this endeavor and work with such extraordinary peers.</p>
-            
+            <h2>Fiction Writing</h2>            
+            <p> I also love to write books (as do my siblings!), and you can view many of my books <a href="https://www.amazon.com/s?i=stripbooks&rh=p_27%3AKaiser+Slocum&s=relevancerank&text=Kaiser+Slocum&ref=dp_byline_sr_book_1"> HERE </a></p>            
+            <img src="FrontCover.png" />
+            <img src="medfront.png" />
         </article>       
     </section>
     <aside>       
