--- a/ProfessionalWebsite/AboutMe/about.html
+++ b/ProfessionalWebsite/AboutMe/about.html
@@ -1,6 +1,6 @@
 <!-- All About Kaiser
     Author: Kaiser Slocum
-    Date (Last Edited): 12/30/2021
+    Date (Last Edited): 7/9/2022
 -->
 <!--Don't forget to add tooltips!  <a href="" title="text">content</a> -->
 
@@ -30,19 +30,18 @@
             <li><a href="about.html"><h2><p>About Kaiser</p></h2></a></li>            
         </ul>
     </nav>
-    <section>
-        
-        
+    <section>  
         <article>
             <h2>Work Experience</h2>
-                <p>I have worked as an independent yard care contractor since about 2013.  In addition, I worked under Premier Staffing Solutions for two years until my client discontinued using their services</p>
-                <p>Around 2015, I started watching the homes of neighbors and friends when they left on vacation in addition to taking care of their pets.  I was also hired from time to time to watch kids or perform other such tasks.</p>
+                <p>I worked as an independent yard care contractor from 2013 to 2022.  In addition, I worked under Premier Staffing Solutions for two years until my client discontinued using their services</p>
+                <p>Around 2015-2022, I started watching the homes of neighbors and friends when they left on vacation in addition to taking care of their pets.  I was also hired from time to time to watch kids or perform other such tasks.</p>
                 <p>From the early summer of 2017 to the end of 2018, I was hired by OBEC Consulting Engineers as an intern to help scan in old, paper copies of plans and files.
                     Because of the size of the job, several other interns were hired later, and I was promoted to Senior Archive Specialist, where I became in charge of the entire archive network.
                     Just before completely scanning in every last paper plan/file, OBEC merged with DOWL.  Thus, I finished my internship as an employee of DOWL Engineering.</p>
                 <p>During the summer of 2019, I was hired by Buck General Contracting to help remodel a house.  It was a new experience for me, but I learned so much!</p>
-                <p>Starting the summer of 2020, I was hired by Elegant Elephant Baking Co. as a dishwasher.  After only three months, I was promoted to assist in baking tasks, and completely run the flour mixing operations in addition to dish washing.</p>
+                <p>From the summer of 2020 to the summer of 2022, I was hired by Elegant Elephant Baking Co. as a dishwasher.  After only three months, I was promoted to assist in baking tasks, and completely run the flour mixing operations in addition to dish washing.</p>
                 <p>During the summer of 2021, I was hired by PONO Security to provide security at the U.S. Olympic trials, it was hard work because of the extremely hot temperatures, but I was glad to be able to help out my hometown at this momentous occation.</p>
+                <p>Starting July 2022, I am now a Tech Team Member of FAST Enterprises and work on software development for governments.</p>
         </article>
         <article>
             <h2>Education</h2>
@@ -60,7 +59,12 @@
                 </ul>   
                 In addition, I graduated my charter school - Baker Charters School - as their Valedictorian!        
             </p>
-            <p></p>
+            <p>University of Oregon: Attended the University of Oregon for two years - majoring in Computer Science and maintaining a GPA of 3.85</br>
+                I graduated from the University of Oregon with a:
+                <ul>
+                    <li>Bachelors in Computer Science</li>
+                </ul>   
+            </p>
         </article>        
         <article>
             <h2>Chess and Hamsters</h2>
@@ -80,11 +84,6 @@
             <h2>Exploration</h2>
             <p>I also like to go exploring and have a little fun while I'm at it...</p>
             <img src="Pirate.jpg" />
-        </article>  
-        <article>
-            <h2>Student</h2>            
-            <p>After three awesome years at Lane Community College, I transferred to the University of Oregon and am now majoring in Computer Science with a minor in math.</p>
-            <p>Also, there are no images here, because I haven't made time for taking pictures while at school!</p>
         </article>   
         <article>
             <h2>Fiction Writing</h2>            
