--- a/HamsterPublishers/Code/bookPage.html
+++ b/HamsterPublishers/Code/bookPage.html
@@ -49,7 +49,7 @@
                     <figcaption > How to Train a Speed Stinger</figcaption>            
                 </figure>
                 <figure onclick="httad()">
-                    <img src="../Images/PowderSunset.png" />
+                    <img src="../Images/PowderSunset.PNG" />
                     <figcaption>How To Train a Dreadstrider</figcaption>            
                 </figure>  
             </div>
