--- a/StingerRunRacingWebsite/index.html
+++ b/StingerRunRacingWebsite/index.html
@@ -25,16 +25,18 @@
     <header>
         <h1>Stinger Run Racing Website</h1>         
     </header>
-    <section>        
-            <p>
-                <a href="https://play.unity.com/mg/other/webglbuilds-241">Web Game</a>
-                <a href="./WindowsBuilds.zip">Windows Build</a>
-                <a href="./">Mac Build</a>
-                <a href="./">Manual</a>                
-            </p>
-            <iframe src="../../StingerRunRacing/README.md#toolbar=0" id='BookDisplay' width='900px' height='800px'></iframe>
-    </section>
-    
+    <nav>
+        <ul>
+            <li><a href="https://play.unity.com/mg/other/webglbuilds-241">Web Game</a></li>
+            <li><a href="./WindowsBuilds.zip">Windows Build</a></li>
+            <li><a href="./">Mac Build</a></li>
+            <li><a href="./">Manual</a> </li>
+        </ul>
+    </nav>
+    <section>    
+        <article>
+            <iframe src="../../StingerRunRacing/README.md#toolbar=0" id='BookDisplay'></iframe>
+        </article>              
+    </section>    
 </body>
-
 </html>
