--- a/WebsiteDev/index.html
+++ b/WebsiteDev/index.html
@@ -1,6 +1,6 @@
 <!-- Website Developer Website
     Author: Kaiser Slocum
-    Date (Last Edited): 7/13/2022
+    Date (Last Edited): 7/16/2022
 -->
 <!--Don't forget to add tooltips!  <a href="" title="text">content</a> -->
 
@@ -25,14 +25,17 @@
     <header>
         <h1>Kaiser's Website Developer</h1>         
     </header>
+    <nav>
+        <ul>
+            <li><a href="../DeliWebsite/index.htm">Kaiser's Deli</a></li>
+            <li><a href="../HamsterPublishersWebsite/Code/bookPage.html">Hamster Publishers Website</a></li>
+            <li><a href="../PersonalWebsite/MainIndex/index.html">Personal Website</a></li>
+            <li><a href="../ProfessionalWebsite/MainIndex/index.html">Professional Website</a></li>
+            <li><a href="../StingerRunRacingWebsite/index.html">Stinger Run Racing Website</a></li>
+        </ul> 
+    </nav>
     <section>        
-            <p>
-                <a href="../DeliWebsite/index.htm">Kaiser's Deli</a>
-                <a href="../HamsterPublishersWebsite/Code/bookPage.html">Hamster Publishers Website</a>
-                <a href="../PersonalWebsite/MainIndex/index.html">Personal Website</a>
-                <a href="../ProfessionalWebsite/MainIndex/index.html">Professional Website</a>
-                <a href="../StingerRunRacingWebsite/index.html">Stinger Run Racing Website</a>
-            </p>            
+                  
     </section>
     
 </body>
