--- a/StingerRunRacingWebsite/index.html
+++ b/StingerRunRacingWebsite/index.html
@@ -28,7 +28,7 @@
     <nav>
         <ul>
             <li><a href="https://play.unity.com/mg/other/webglbuilds-241">Web Game</a></li>
-            <li><a href="./WindowsBuilds.zip">Windows Build</a></li>
+            <li><a href="https://drive.google.com/file/d/15z07UQtmrFGlwlQTLFj6ANIXRNclFtLh/view?usp=sharing">Windows Build</a></li>
             <li><a href="./">Mac Build</a></li>
             <li><a href="./">Manual</a> </li>
         </ul>
