Updated text file

--- a/StingerRunRacingWebsite/index.html
+++ b/StingerRunRacingWebsite/index.html
@@ -1,6 +1,6 @@
 <!-- Stinger Run Racing Website
     Author: Kaiser Slocum
-    Date (Last Edited): 7/13/2022
+    Date (Last Edited): 9/4/2022
 -->
 <!--Don't forget to add tooltips!  <a href="" title="text">content</a> -->
 
@@ -35,7 +35,7 @@
     </nav>
     <section>    
         <article>
-            <iframe src="../../StingerRunRacing/README.md#toolbar=0" id='BookDisplay'></iframe>
+            <iframe src="./Updates.txt#toolbar=0" id='UpdatesDisplay'></iframe>
         </article>              
     </section>    
 </body>
