--- a/PersonalWebsite/MyBlog/blog.html
+++ b/PersonalWebsite/MyBlog/blog.html
@@ -191,7 +191,35 @@
                 Trials at Hayward Fields.  We ended the year with a rare, large amount of snow that seems to correlate with the intense heat experienced during the summer.  Classes at UO, were very
                 interesting to say the least, but I eventually was able to develop a rhythm to get everything done.
             </p>
-        </article>         
+        </article> 
+        <article id="2022">
+            <h2>2022 Highlights</h2>
+            <p> I guess you can say that the theme this year was “firsts” as I did more major “firsts” than several past years combined.  So yeah, it’s been a crazy year.  
+                If you aren’t aware, I moved away from Eugene, Oregon (where I have lived all my life) this summer (early July) and embarked on an epic journey to St. Paul, Minnesota for my new job.  
+                I first flew by myself for the first time on a plane to Centennial, Colorado (first time in Colorado) where I spent about three weeks for job training (first time in a hotel room by myself, 
+                first time riding a light rail) and then moved over here to Minnesota (first time in Minnesota) where I work as a tech member on the tax software that the state of Minnesota uses 
+                (and no, I do not do taxes, I’m just working on maintaining and upgrading the software).  This is my first full-time, non-intern job, and it is going as well as can be expected, 
+                and thankfully all my coworkers are super nice.  In fact, one of them invited me over to his family’s thanksgiving (first time not attending a Thanksgiving dinner with my family) which I did end up going to!
+I had a few misconceptions about Minnesota from living in Oregon for so long, but I can say that Minnesota is a lot like Oregon, just a bit colder and with a more diverse population of people (which is honestly so cool to see the many different cultures!).  
+For my first two weeks here in Minnesota, I used a 2019 KIA Soul which had lane assist – which is my first time using that! I have already been doing a lot of driving around in snow (thankfully my first car (2014 Subaru Crosstrek) that I bought over here has all-wheel drive!).  
+Oh, and Minnesota doesn’t have gas station attendants, so I had to pump gas for the first time for myself! Also, it’s VERY snowy and cold over here, so that’s another first: driving at night when it’s snowing! 
+Where I live in St. Paul there are at least four massive malls within easy driving distance and as many restaurants, grocery stores, and random other things that anyone could ever need.  
+By the way, I found an apartment (first time living in one) in a massive, four-building, 460 apartment complex.  I guess another first has been paying utility bills and allowing the government to take criminal amounts of taxes from my paychecks. 
+With this monstrous transition has come lots of exciting and fun stuff like visiting the Mall of America for the first time, going to a massive Halloween festival farm where I completed a corn maze for the first time by myself and saw water buffalo for the first time.  
+I was also about to go to a bow range for the first time and shoot some arrows (no I didn’t injure anyone or myself).  I was also able to attend two Halloween parties (first time doing that by myself!) and dressed up as a Viking in honor of the Minnesota Vikings professional football team.  
+I also went to two different bars for the first time as my work always has its meet-ups at bars.  I’m going to be honest with you, I felt super uncomfortable for both, but I made it through (and no, I didn’t drink anything!). 
+At the beginning of August, I was able to fly to Washington and meet up with my older sister Kenzie for a business convention (unrelated to my new job) which was a ton of fun.
+I also made it a priority to plug into a church as soon as possible, and I found an awesome church (first time going to a church by myself) that is only a five-minute drive away from my apartment, called Resurrection City Church.  
+After a few months, I became an official member (first time becoming an official church member) and am now part of a community group within the church and regularly attend on Sundays as well.  
+I have really enjoyed getting to know the members of this community group, and I hope that I can continue to engage with other members of the church.  It has been a good year for growing closer to God with all this new stuff and having to rely on Him, but that’s good; relying on God more than myself is something that is important for me!
+Other than my weekend in Washington with Kenzie, I have not seen in-person any of my family and relatives, which has been a bit hard, but not nearly as bad as I thought (which is a first to be gone from my family for more than a month, but luckily I have been showing no signs of home sickness).  
+It has been a massive blessing for some of my friends and relatives to call and zoom me, and I do hope that you will continue to stay in contact with me! If you would like to pray for me, I would love some prayer that I would:
+<ul>
+    <li> Be able to continue to connect with church members over here and find some Christian friends that I could also connect with. </li>
+    <li> Stay safe and healthy (although Minnesota has great medical services everywhere) </li>    
+</ul>
+            </p>
+        </article>        
     </section>
     <aside>        
         <article>            
@@ -207,6 +235,7 @@
                 <li><a href="#2019">2019 Highlights</a></li> 
                 <li><a href="#2020">2020 Highlights</a></li>   
                 <li><a href="#2021">2021 Highlights</a></li>  
+                <li><a href="#2022">2022 Highlights</a></li>  
                 <li><a href="#buckGeneralContracting">Buck General Contracting</a></li>          
             </ul>         
         </article> 
