Stinger Run Racing Website Update

--- a/StingerRunRacingWebsite/index.html
+++ b/StingerRunRacingWebsite/index.html
@@ -1,6 +1,6 @@
 <!-- Stinger Run Racing Website
     Author: Kaiser Slocum
-    Date (Last Edited): 9/4/2022
+    Date (Last Edited): 2/20/2023
 -->
 <!--Don't forget to add tooltips!  <a href="" title="text">content</a> -->
 
@@ -27,10 +27,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="https://play.unity.com/mg/other/webglbuilds-241">Web Game</a></li>
-            <li><a href="https://drive.google.com/file/d/15z07UQtmrFGlwlQTLFj6ANIXRNclFtLh/view?usp=sharing">Windows Build</a></li>
-            <li><a href="./">Mac Build</a></li>
-            <li><a href="./">Manual</a> </li>
+            <li><a href="https://play.unity.com/p/webglbuilds-316">Web Game</a></li>
+            <li><a href="https://drive.google.com/file/d/1AtLQ3VV28-4gpPb7sGA8roWfskLwKFh8/view?usp=sharing">Windows Build</a></li>
+            <li><a href="./">Manual (Does Not Exist yet)</a> </li>
         </ul>
     </nav>
     <section>    
