--- a/PersonalWebsite/AboutMe/about.html
+++ b/PersonalWebsite/AboutMe/about.html
@@ -115,6 +115,8 @@
                 <li>Favorite computer: Dell Inspiron</li>
                 <li>Favorite movie/tv series: How To Train Your Dragon</li>
                 <li>Favorite Disney movie/tv series: Big Hero 6</li>
+                <li>Favorite Flower: Celosia (Pampus Plume)</li>
+                <li>Favorite Bird: Great Eared Nightjar</li>
             </ul>            
         </article> 
     </aside> 
