--- a/HamsterPublishersWebsite/Code/bookPage.html
+++ b/HamsterPublishersWebsite/Code/bookPage.html
@@ -74,7 +74,7 @@
                     <img src="../Images/templefortress.jpg" />
                     <figcaption>The Return: Elven Decimation</figcaption>            
                 </figure>
-                <p>This series can also be purchased on Amazon by going <a href="Amazon.com/">HERE</a></p>
+                <p>This series can also be purchased on Amazon by going <a href="https://www.amazon.com/s?i=digital-text&rh=p_27%3AKaiser+Slocum&s=relevancerank&text=Kaiser+Slocum&ref=dp_byline_sr_ebooks_1/">HERE</a></p>
             </div>
             <div id="Miscellaneous">
                 <h3>Miscellaneous: Original, Stand-alone</h3>
