--- a/PersonalWebsite/MainIndex/index.html
+++ b/PersonalWebsite/MainIndex/index.html
@@ -40,7 +40,8 @@
                 <img src="KaiserAvatarPicNew.png" />
                 <figcaption>Me!</figcaption>
             </figure> 
-            <p>My name is Kaiser Slocum, and I am a Tech Team Member at <a href="https://www.fastenterprises.com/"> Fast Enterprises.</a></p>
+            <p>My name is Kaiser Slocum, and I am a Tech Team Member at <a href="https://www.fastenterprises.com/"> Fast Enterprises</a>.  Currently, I am working 
+                at the State of Minnesota on their tax software. </p>
             <p>I have a Bachelor's in Computer Science from the <a href="https://www.uoregon.edu/"> University of Oregon</a> as well.</p>
             <p>Welcome to my personal website.  Feel free to look around to learn more about me and what I do!</p>
             <p>To learn more about me and what I am up to, click the "About Kaiser" link above.</p>
@@ -50,7 +51,7 @@
             </p>
             <p>You can also view some of my programming work in my GitHub Repositiory:
                 <a href="https://github.com/WizardGit">Github Respository</a>.
-             </p>                  
+             </p>            
             <p>For a full list of my education and previous work experience, download a PDF version of my <a href="KaiserSlocumResume.pdf">Resume here.</a></p>
         </article>
         <article id="websites">
