--- a/ProfessionalWebsite/MainIndex/index.html
+++ b/ProfessionalWebsite/MainIndex/index.html
@@ -1,6 +1,6 @@
 <!-- All About Kaiser
     Author: Kaiser Slocum
-    Date (Last Edited): 7/9/2022
+    Date (Last Edited): 2/26/2023
 -->
 <!--Don't forget to add tooltips!  <a href="" title="text">content</a> -->
 
@@ -26,12 +26,6 @@
     <header>
         <h1>Kaiser's Corner</h1>         
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Kaiser's Corner</a></li>
-            <li><a href="../AboutMe/about.html">About Kaiser</a></li>            
-        </ul>
-    </nav>
     <section>
         <article id="kaiser">
             <h2> Who am I? </h2>
@@ -39,7 +33,8 @@
                 <img src="KaiserAvatarPicNew.png" />
                 <figcaption>Me!</figcaption>
             </figure> 
-            <p>My name is Kaiser Slocum, and I am a Tech Team Member at <a href="https://www.fastenterprises.com/"> Fast Enterprises.</a></p>
+            <p>My name is Kaiser Slocum, and I am a Tech Team Member at <a href="https://www.fastenterprises.com/"> Fast Enterprises</a>.  Currently, I am working 
+                at the State of Minnesota on their tax software. </p>
             <p>I have a Bachelor's in Computer Science from the <a href="https://www.uoregon.edu/"> University of Oregon</a> as well.</p>
             <p>Welcome to my personal website.  Feel free to look around to learn more about me and what I do!</p>
             <p>To learn more about me and what I am up to, click the "About Kaiser" link above.</p>
@@ -54,29 +49,24 @@
         </article>
         <article>
             <h2>Technical Skills!</h2>
-            <p>Programming Languages: C++, C#, Python, C, HTML 5, CSS3, Javascript, PHP</p>
+            <p>Programming Languages: C++, C#, Python, C, Visual Basic, Standard ML, HTML 5, CSS3, Javascript, PHP</p>
             <p>Frameworks and Applications: .NET framework, Visual Studio, Eclipse, CodeBlocks, Jupyter Notebook</p>
             <p>Platform/OS: Windows, Apple, Linux – Ubuntu / Arch Linux</p>
-            <p>Databases: Microsoft SQL, SQL, NOSQL (on Firebase)</p>
-            <p>Revision Control: GIT, Bitbucket, Github (All of these I keep fairly active, as it seems that I'm always working on some sort of programming project!)</p>
+            <p>Databases: Microsoft SQL, SQL, NOSQL</p>
+            <p>Revision Control: GIT, Bitbucket, Github</p>
             <p>Math: Trigonometry, Statistics, Calculus, Discrete, Numerical Analysis</p>   
             <p>Experience: Machine Learning (PyTorch, Keras, Computer Vision, CNN’s, GAN’s), Cryptography (OpenSSL), Unity Game Engine, Networking (Cisco Packet Tracer, Wire Shark, Router configuring)</p>         
         </article>
         <article>
             <h2>Highlighted Projects!</h2>
-            <p><a href="">You can view the following projects here!</a></p>
             <p>If you are anything like me, losing board games is not the most fun thing in the world.  Thus, while playing "CLUE" with my siblings and always losing horribly, I 
                 had the idea to design some software that will utilize every possible clue and deduction available to arrive at the answer as swiftly as is possible.  I did finally
                 manage to code up the entire project, but it involved several classes and took quite a bit longer than anticipated.  However, the result was definitely worth it!</p>
             <p>At my past job at Elegant Elephant Baking Co., I noticed several inefficiencies in taking flour inventory, so I created some easy-to-use software for the company that
                 speeds up the process, eliminates error-prone areas, and encourages efficiency!</p>
-            <p>
-                I am currently collaborating with two undergraduates from the University of Oregon to create a Dragon Racing Game in Unity. 
-                You can view the GitHub Repository <a href="https://github.com/WizardGit/StingerRunRacing">here</a> and the game <a href="https://play.unity.com/mg/other/webgl-builds-241">here!</a>
-            </p>
-            <p>
-
-            </p>
+            <p>I collaborated with two undergraduates from the University of Oregon to create a Dragon Racing Game in Unity. I continue to push out updates to it by myself now, and you can view the website for 
+                the game <a href="../StingerRunRacingWebsite/index.html">here</a>.</p>            
+            <p> I am currently working on some budget software (using Visual Studio, C#, and SQL) that will help people take better care of their finances.</p>
         </article>        
     </section>
     <aside>        
@@ -89,7 +79,7 @@
         <article>            
             <h2>In Memory of <br> DJ, Cupcake, Katee, Prince, Coconut </h2>
             <p><img src="Coconut.jpg" title="Coconut in her hay hut"/></p>
-            <p><img src="../AboutMe/DJChess.JPG" title="DJ playing chess" id="DJChess" /></p>
+            <p><img src="DJChess.JPG" title="DJ playing chess" id="DJChess" /></p>
             <p id="description">Over the last few years, I have enjoyed playing with and training about thirty hamsters.  Hamsters are a good reminder to me to stay fun! </p>            
         </article> 
     </aside> 
