--- a/HamsterPublishersWebsite/Code/bookPage.html
+++ b/HamsterPublishersWebsite/Code/bookPage.html
@@ -30,7 +30,7 @@
     </header>
     <section>   
         <h2> <img src="../Images/HamsterPublishers.png"></h2>
-        <p id="instructions"> Click an image below to view that book's first chapter!</p>  
+        <p id="instructions"> Click an image below to view that book!</p>  
         <article id="books">
             <div id="HTTYD">
                 <h3>How To Train Your Dragon: Fan-fiction</h3>                
