--- a/PersonalWebsite/MainIndex/index.html
+++ b/PersonalWebsite/MainIndex/index.html
@@ -85,7 +85,7 @@
         <article>            
             <h2>In Memory of <br> DJ, Cupcake, Katee, Prince, Coconut </h2>
             <p><img src="Coconut.jpg" title="Coconut in her hay hut"/></p>
-            <p><img src="DJChess.jpg" title="DJ playing chess" id="DJChess" /></p>
+            <p><img src="DJChess.JPG" title="DJ playing chess" id="DJChess" /></p>
             <p id="description">Over the last few years, I have enjoyed playing with and training about thirty hamsters.  Hamsters are a good reminder to me to stay fun! </p>            
         </article> 
     </aside> 
