--- a/PersonalWebsite/AboutMe/about.html
+++ b/PersonalWebsite/AboutMe/about.html
@@ -98,25 +98,27 @@
         <article>            
             <h2>Favorites</h2>            
             <ul>
-                <li>Favorite food: Ice Cream</li>
-                <li>Favorite cracker: Chicken In a Biskit</li>
-                <li>Favorite drink: Orange Crush</li>
-                <li>Favorite chip: Natural Cheetoes</li>
-                <li>Favorite book series: Spy School</li>
-                <li>Favorite color: Green and Blue</li>
-                <li>Favorite sport: Badminton</li>
-                <li>Favorite car: Subaru XV Crosstrek</li>
-                <li>Favorite school subject: Math</li>
-                <li>Favorite board game: Gobblet Gobblers, Chess, Forbidden Island/Desert</li>
-                <li>Favorite chess piece: Knight</li>
-                <li>Favorite toy: Lego (The highly innovative Robotics Invention System line that Lego released in 2000 got me interested in programming)</li>
-                <li>Favorite instrument: Bass Clarinet</li>
-                <li>Favorite video game: HER Interactive: Nancy Drew games</li>
-                <li>Favorite computer: Dell Inspiron</li>
-                <li>Favorite movie/tv series: How To Train Your Dragon</li>
-                <li>Favorite Disney movie/tv series: Big Hero 6</li>
+                <li>Favorite Food: Ice Cream</li>
+                <li>Favorite Cracker: Chicken In a Biskit</li>
+                <li>Favorite Drink: Orange Crush</li>
+                <li>Favorite Chip: Natural Cheetoes</li>
+                <li>Favorite Book series: Spy School</li>
+                <li>Favorite Color: Green and Blue</li>
+                <li>Favorite Sport: Badminton</li>
+                <li>Favorite Car: Subaru XV Crosstrek</li>
+                <li>Favorite School Subject: Math</li>
+                <li>Favorite Board Game: Gobblet Gobblers, Chess, Forbidden Island/Desert</li>
+                <li>Favorite Chess Piece: Knight</li>
+                <li>Favorite Toy: Lego (The highly innovative Robotics Invention System line that Lego released in 2000 got me interested in programming)</li>
+                <li>Favorite Instrument: Bass Clarinet</li>
+                <li>Favorite Video Game: HER Interactive: Nancy Drew games</li>
+                <li>Favorite Computer: Dell Inspiron</li>
+                <li>Favorite Movie/TV Series: How To Train Your Dragon</li>
+                <li>Favorite Disney Movie/TV Series: Big Hero 6</li>
                 <li>Favorite Flower: Celosia (Pampus Plume)</li>
                 <li>Favorite Bird: Great Eared Nightjar</li>
+                <li>Favorite Animal: Manatee</li>
+                <li>Favorite LEGO Piece: Sand Purple Arch 1 x 8 x 6 (Portal)</li>
                 <li>IQ: 132</li>
             </ul>            
         </article> 
